# robot-demo

./: .gitignore  Makefile  README.md
.devcontainer/: Dockerfile
launch/: hw2.yaml  hw3.yaml
script/: Dockerfile  plan.py
script/camera/: calibrate_camera.py  capture_chessboard.py  detect_apriltag.py  test_camera_fps.py
src/april/: package.xml  setup.cfg  setup.py
src/april/april/: april.py
src/camera/: CMakeLists.txt  package.xml  setup.py
src/camera/camera/: camera.py
src/camera/include/camera/: rb_camera_ocv.h
src/camera/src/: rb_camera_ocv_node.cpp
src/control/: package.xml  setup.py
src/control/control/: mpi_control.py  mpi_control_node.py  mpi_twist_control_node.py
src/interface/: CMakeLists.txt  package.xml
src/route/: package.xml  setup.cfg  setup.py
src/route/route/: coverage_plan.py  hw1.py  hw2.py  hw2_joy.py  hw2_old.py  hw2_twist.py  hw3.py  hw3_id.py  kalman_slam.py  kalman_slam_id.py  key_joy_node.py  pid.py  plans.py
